# emotionDetector

./: CMakeLists.txt  README.md  data.csv  data.json  data_multi.json  meta-data.json  run.sh
brain/: DataGenerator.cpp  DataGenerator.hpp  HappynessMachine.cpp  HappynessMachine.hpp  Machine.cpp  Machine.hpp  PatternFinder.cpp  PatternFinder.hpp
cvwrapper/: Application.cpp  Application.hpp  Capture.cpp  Capture.hpp  Detector.cpp  Detector.hpp  FaceDetector.cpp  FaceDetector.hpp  Image.cpp  Image.hpp  Window.cpp  Window.hpp
libs/: Json.hpp  testy.hpp
src/: Application.cpp  Application.hpp  main.cpp
tests/: PatternFinder.cpp  machine.cpp
utils/: Command.cpp  Command.hpp  Log.cpp  Log.hpp  NonCopyable.hpp  convert.hpp  loadCsv.cpp  loadCsv.hpp
